crates/core/tests/snapshots/setting_validate_test__setting_validate__named_struct__accepts_func_ref.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.a {
        validate.check("a", setting, self, |v, d, c, f| func_ref(v, d, c, f));
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
