crates/core/tests/snapshots/setting_validate_test__setting_validate__named_struct__supports_nested_collections.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.a {
        validate.check("a", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_list("a", setting.iter().map(Some));
    }
    if let Some(setting) = &self.b {
        validate.check("b", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_map("b", setting.iter().map(|(key, value)| (key, Some(value))));
    }
    if let Some(setting) = &self.c {
        validate.check("c", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_list("c", setting.iter().map(Some));
    }
    if let Some(setting) = &self.d {
        validate.nested_list("d", setting.iter().map(Some));
    }
    if let Some(setting) = &self.e {
        validate.nested_map("e", setting.iter().map(|(key, value)| (key, Some(value))));
    }
    if let Some(setting) = &self.f {
        validate.nested_list("f", setting.iter().map(Some));
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
