crates/core/tests/snapshots/setting_validate_test__setting_validate__named_struct__supports_nested_wrappers.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.a {
        validate.nested("a", setting);
    }
    if let Some(setting) = &self.b {
        validate.nested("b", setting);
    }
    if let Some(setting) = &self.c {
        validate.nested("c", setting);
    }
    if let Some(setting) = &self.d {
        validate.nested_list("d", setting.iter().map(Some));
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
