crates/core/tests/snapshots/setting_validate_test__setting_validate__named_struct__uses_serde_names.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.a {
        validate.check("aa", setting, self, Box::new(func_ref));
    }
    if self.b.is_none() {
        validate.required("bb");
    }
    if let Some(setting) = &self.c {
        validate.nested("cc", setting);
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
